<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:text="@string/txt_ingresemonto"
        android:textColor="#000"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_monto"
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/h_zero"
        android:textSize="50sp" />

    <Button
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/btn_continuar"
        android:background="@drawable/button_shape"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:id="@+id/btn_continuar"
        />

</LinearLayout>