<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".FinalActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/txt_pagar"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/txt_importe"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/txt_bank"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/txt_banco"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="italic"/>

    <Button
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/btn_confirmar"
        android:background="@drawable/button_shape"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:id="@+id/btn_confirmar"
        />

</LinearLayout>